[gd_scene load_steps=9 format=3 uid="uid://dqochfhr74x5e"]

[ext_resource type="Texture2D" uid="uid://dinr4jtesidqv" path="res://image/character/lagoutte/sprite_sheet/goutte.png" id="1_2sk3l"]
[ext_resource type="Script" path="res://scripte/goutte.gd" id="1_pyt4o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8k5gt"]
size = Vector2(202, 508)

[sub_resource type="Animation" id="Animation_4p5jx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_goutte:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4fa4s"]
resource_name = "idle"
length = 0.93
loop_mode = 1
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_goutte:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78, 0.81, 0.84, 0.87),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77]
}

[sub_resource type="Animation" id="Animation_mnivv"]
resource_name = "marche"
length = 1.44
loop_mode = 1
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_goutte:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78, 0.81, 0.84, 0.87, 0.9, 0.93, 0.96, 0.99, 1.02, 1.05, 1.08, 1.11, 1.14, 1.17, 1.2, 1.23, 1.26, 1.29, 1.32, 1.35, 1.38),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ndumy"]
_data = {
"RESET": SubResource("Animation_4p5jx"),
"idle": SubResource("Animation_4fa4s"),
"marche": SubResource("Animation_mnivv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ly22"]
size = Vector2(58, 514)

[node name="goutte" type="CharacterBody2D"]
script = ExtResource("1_pyt4o")

[node name="Sprite_goutte" type="Sprite2D" parent="."]
texture = ExtResource("1_2sk3l")
hframes = 9
vframes = 9

[node name="Collision_goutte" type="CollisionShape2D" parent="."]
position = Vector2(-19, 13)
shape = SubResource("RectangleShape2D_8k5gt")

[node name="Animation_goutte" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ndumy")
}
autoplay = "idle"

[node name="Camera_goutte" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)

[node name="item_goutte" type="Sprite2D" parent="."]
position = Vector2(0.0486298, -276.564)

[node name="Area_goutte" type="Area2D" parent="."]

[node name="inetteraction_goutte" type="CollisionShape2D" parent="Area_goutte"]
position = Vector2(-11, 10)
shape = SubResource("RectangleShape2D_0ly22")
debug_color = Color(0.901064, 0.220412, 0.55415, 0.42)

[connection signal="area_entered" from="Area_goutte" to="." method="_on_area_goutte_area_entered"]
[connection signal="area_exited" from="Area_goutte" to="." method="_on_area_goutte_area_exited"]
